added title and desc

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,15 @@
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
+        <meta name="theme-color" content="#ffffff" />
         <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="A highly motivated, self-taught software developer working
+            with .NET Framework and .NET Core. I started with JavaScript
+            when I was 12 and have since explored into .NET and Go. I
+            have two, level 4 diplomas from BCS, in software development
+            methodologies and software languages, which I believe I was
+            the youngest in the country to complete."
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -15,7 +20,9 @@
             rel="stylesheet"
             href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
         />
-        <title>React App</title>
+        <title>
+            Reece Russell | Software Developer | C#, .NET Core, Go, JavaScript
+        </title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
