--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#ffffff"/><meta name="description" content="A highly motivated, self-taught software developer working
+<!doctype html><html lang="en"><head><script async src="https://www.googletagmanager.com/gtag/js?id=UA-179297545-1"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-179297545-1")</script><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#ffffff"/><meta name="description" content="A highly motivated, self-taught software developer working
             with .NET Framework and .NET Core. I started with JavaScript
             when I was 12 and have since explored into .NET and Go. I
             have two, level 4 diplomas from BCS, in software development
