--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,18 @@
             rel="stylesheet"
             href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
         />
+
+        <link
+            rel="stylesheet"
+            href="%PUBLIC_URL%/styles/dark.css"
+            media="(prefers-color-scheme: dark)"
+        />
+        <link
+            rel="stylesheet"
+            href="%PUBLIC_URL%/styles/light.css"
+            media="(prefers-color-scheme: light)"
+        />
+
         <title>
             Reece Russell | Software Developer | C#, .NET Core, Go, JavaScript
         </title>
